code/c10/2-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  sessionAffinity: ClientIP
  selector:
    app: kubia
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
