code/c10/3-Endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: chinook
subsets:
- addresses:
  - ip: 10.244.0.35
  - ip: 10.244.0.36
  - ip: 10.244.0.37
  ports:
  - port: 8080
    protocol: TCP
