code/c10/4-NodePortService.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: kubia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
